finish section features-03

--- a/src/home-03.html
+++ b/src/home-03.html
@@ -1,12 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
-	@@include('html/_head.htm',{
-	"title":"VPNLandingPages-03"
-	})
-	<body>
-		<div class="wrapper">
-			@@include('html/_header-03.htm',{})
-			<main class="page">
+@@include('html/_head.htm',{
+"title":"VPNLandingPages-03"
+})
+
+<body>
+   <div class="wrapper">
+      @@include('html/_header-03.htm',{})
+      <main class="page">
+
+         <section class="page__features-03 features-03">
+            <div class="features-03__container">
+               <h2 class="features-03__title title">
+                  features
+               </h2>
+               <div class="features-03__inner">
+                  <div class="features-03__body-card card-03">
+                     <!--блок для ограничения ширины в 1300px-->
+                     <div class="card-03__row">
+                        <!--будущий flex-контейнер-->
+                        <div class="card-03__column">
+                           <!--колонки-->
+                           <div class="card-03__item">
+                              <!--создаем саму карточку flex-элемент-->
+                              <div class="card-03__image card-03__image_01">
+                                 <img src="@img/features/icon-31.svg" alt="" class="card-03__icon">
+                              </div>
+                              <div class="card-03__text">Browse privately</div>
+                           </div>
+                        </div>
+
+                        <div class="card-03__column">
+                           <!--колонки-->
+                           <div class="card-03__item card-03__item_02">
+                              <!--создаем саму карточку flex-элемент-->
+                              <div class="card-03__image card-03__image_02">
+                                 <img src="@img/features/icon-32.svg" alt="" class="card-03__icon">
+                              </div>
+                              <div class="card-03__text">Bypass</div>
+                           </div>
+                        </div>
+
+                        <div class="card-03__column">
+                           <!--колонки-->
+                           <div class="card-03__item">
+                              <!--создаем саму карточку flex-элемент-->
+                              <div class="card-03__image card-03__image_03">
+                                 <img src="@img/features/icon-33.svg" alt="" class="card-03__icon">
+                              </div>
+                              <div class="card-03__text">Clean web</div>
+                           </div>
+                        </div>
+
+                        <div class="card-03__column">
+                           <!--колонки-->
+                           <div class="card-03__item card-03__item_04">
+                              <!--создаем саму карточку flex-элемент-->
+                              <div class="card-03__image card-03__image_04">
+                                 <img src="@img/features/icon-34.svg" alt="" class="card-03__icon">
+                              </div>
+                              <div class="card-03__text">No logging</div>
+                           </div>
+                        </div>
+
+                        <div class="card-03__column">
+                           <!--колонки-->
+                           <div class="card-03__item">
+                              <!--создаем саму карточку flex-элемент-->
+                              <div class="card-03__image card-03__image_05">
+                                 <img src="@img/features/icon-35.svg" alt="" class="card-03__icon">
+                              </div>
+                              <div class="card-03__text">Encryption</div>
+                           </div>
+                        </div>
+
+                        <div class="card-03__column">
+                           <!--колонки-->
+                           <div class="card-03__item card-03__item_06">
+                              <!--создаем саму карточку flex-элемент-->
+                              <div class="card-03__image card-03__image_06">
+                                 <img src="@img/features/icon-36.svg" alt="" class="card-03__icon">
+                              </div>
+                              <div class="card-03__text">Kill switch</div>
+                           </div>
+                        </div>
+
+                     </div>
+                  </div>
+
+               </div>
+            </div>
+         </section>
+
+         <section class="page__steps-03 steps-03">
+            <div class="steps-03__container">
+               <div class="steps-03__inner">
+                  <h2 class="steps-03__title-03 title">
+                     PRIVACY AND PROTECTION IN THREE STEPS
+                  </h2>
+
+                  <div class="steps-03__body-card-03 card-steps-03">
+                     <!--блок для ограничения ширины в 1300px-->
+                     <div class="card-steps-03__row">
+                        <!--будущий flex-контейнер-->
+                        <div class="card-steps-03__column">
+                           <!--колонки-->
+                           <div class="card-steps-03__item">
+                              <!--создаем саму карточку flex-элемент-->
+                              <div class="card-steps-03__image">
+                                 <img src="@img/steps/step-31.svg" alt="Image">
+                              </div>
+                              <div class="card-steps-03__button">
+                                 <a class="card-steps-03__btn-03 btn-03_green btn-03" href="#">DOWNLOAD</a>
+                              </div>
+                           </div>
+                        </div>
+
+                        <div class="card-steps-03__column">
+                           <!--колонки-->
+                           <div class="card-steps-03__item">
+                              <!--создаем саму карточку flex-элемент-->
+                              <div class="card-steps-03__image">
+                                 <img src="@img/steps/step-32.svg" alt="Image">
+                              </div>
+                              <div class="card-steps-03__button">
+                                 <a class="card-steps-03__btn-03 btn-03_yellow btn-03" href="#">SELECT SERVER</a>
+                              </div>
+                           </div>
+                        </div>
+
+                        <div class="card-steps-03__column">
+                           <!--колонки-->
+                           <div class="card-steps-03__item">
+                              <!--создаем саму карточку flex-элемент-->
+                              <div class="card-steps-03__image">
+                                 <img src="@img/steps/step-33.svg" alt="Image">
+                              </div>
+                              <div class="card-steps-03__button">
+                                 <a class="card-steps-03__btn-03 btn-03_blue btn-03" href="#">ACTIVATE & GO!</a>
+                              </div>
+                           </div>
+                        </div>
+
+                     </div>
+                  </div>
+
+               </div>
+            </div>
+         </section>
 
          <section class="page__protection-03 protection-03">
             <div class="protection-03__title title">
@@ -39,7 +180,7 @@
                      </ul>
                   </div>
 
-                  <a class="design-03__btn-03 btn-03" href="#">GET STARTED</a>
+                  <a class="design-03__btn-03 btn-03 btn-03_red" href="#">GET STARTED</a>
                </div>
 
                <div class="protection-03__image">
@@ -47,77 +188,78 @@
                </div>
             </div>
          </section>
-            
-            <section class="page__support support">
-               <div class="support__container">
-                  <div class="support__inner">
-                     <div class="support__row">
-                        <div class="support__column support__column_01">
-                           <div class="support__card">
-                              <div class="support__title">WE VALUE YOUR PRIVACY</div>
-                              <div class="support__text">
-                                 <p>
-                                    Your information provided is solely used by PrivateSurf VPN
-                                    for the use of a virtual private network.
-                                    We will not sell your information to any other party.
-                                 </p>
-                              </div>
-                           </div>
-                        </div>
-   
-                        <div class="support__column support__column_02">
-                           <div class="support__card">
-                              <div class="support__title">CUSTOMER SUPPORT</div>
-                              <div class="support__text">
-                                 <p>
-                                    Our technical support team is ready to answer questions.
-                                    You can contact them at cs@surfingvpn.com
-                                 </p>
-                              </div>
-                           </div>
-                        </div>
-   
-                        <div class="support__column support__column_03">
-                           <div class="support__card">
-                              <div class="support__title">YOUR SATISFACTION IS OUR PRIORITY</div>
-                              <div class="support__text">
-                                 <p>
-                                    If you are in any way unhappy with the quality of our service
-                                    or product please contact us. We are here to help you.
-                                 </p>
-                              </div>
-                           </div>
-                        </div>
-   
-                        <div class="support__column support__column_04">
-                           <div class="support__card">
-                              <div class="support__title">WHAT ARE THE BENEFITS OF A VPN?</div>
-                              <div class="support__text">
-                                 <p>
-                                    With PrivateSurf VPN you can access content from different
-                                    countries, which would not neccessarily be available in your
-                                    country. Also with a VPN you can hide your online presence
-                                    to secure your daily internet activity
-                                 </p>
-                              </div>
+
+         <section class="page__support support">
+            <div class="support__container">
+               <div class="support__inner">
+                  <div class="support__row">
+                     <div class="support__column support__column_01">
+                        <div class="support__card">
+                           <div class="support__title">WE VALUE YOUR PRIVACY</div>
+                           <div class="support__text">
+                              <p>
+                                 Your information provided is solely used by PrivateSurf VPN
+                                 for the use of a virtual private network.
+                                 We will not sell your information to any other party.
+                              </p>
                            </div>
                         </div>
                      </div>
-   
-                     <div class="support__conditions">
-                        <ul class="support__items">
-                           <li>Privacy Policy</li>
-                           <li>Terms and conditions</li>
-                           <li>Contact</li>
-                           <li>How to uninstall</li>
-                        </ul>
+
+                     <div class="support__column support__column_02">
+                        <div class="support__card">
+                           <div class="support__title">CUSTOMER SUPPORT</div>
+                           <div class="support__text">
+                              <p>
+                                 Our technical support team is ready to answer questions.
+                                 You can contact them at cs@surfingvpn.com
+                              </p>
+                           </div>
+                        </div>
+                     </div>
+
+                     <div class="support__column support__column_03">
+                        <div class="support__card">
+                           <div class="support__title">YOUR SATISFACTION IS OUR PRIORITY</div>
+                           <div class="support__text">
+                              <p>
+                                 If you are in any way unhappy with the quality of our service
+                                 or product please contact us. We are here to help you.
+                              </p>
+                           </div>
+                        </div>
+                     </div>
+
+                     <div class="support__column support__column_04">
+                        <div class="support__card">
+                           <div class="support__title">WHAT ARE THE BENEFITS OF A VPN?</div>
+                           <div class="support__text">
+                              <p>
+                                 With PrivateSurf VPN you can access content from different
+                                 countries, which would not neccessarily be available in your
+                                 country. Also with a VPN you can hide your online presence
+                                 to secure your daily internet activity
+                              </p>
+                           </div>
+                        </div>
                      </div>
                   </div>
+
+                  <div class="support__conditions">
+                     <ul class="support__items">
+                        <li>Privacy Policy</li>
+                        <li>Terms and conditions</li>
+                        <li>Contact</li>
+                        <li>How to uninstall</li>
+                     </ul>
+                  </div>
                </div>
-            </section>
-			</main>
-			@@include('html/_footer-03.htm',{})
-		</div>
-		@@include('html/_js.htm',{})
-	</body>
+            </div>
+         </section>
+      </main>
+      @@include('html/_footer-03.htm',{})
+   </div>
+   @@include('html/_js.htm',{})
+</body>
+
 </html>
