--- a/src/html/_header-03.htm
+++ b/src/html/_header-03.htm
@@ -1,4 +1,12 @@
-<header class="header">
-	<div class="header__container">
+<header class="header-03">
+	<div class="header-03__container">
+      <div class="header-03__inner">
+         <div class="header-03__image">
+            <img src="@img/header/logo-03.svg" alt="logo">
+         </div>
+         <div class="header-03__button">
+            <a class="header-03__btn" href="#">CANCEL MY MEMBERSHIP</a>
+         </div>
+      </div>  
 	</div>
 </header>
