--- a/src/home-03.html
+++ b/src/home-03.html
@@ -9,6 +9,77 @@
       @@include('html/_header-03.htm',{})
       <main class="page">
 
+         <section class="page__why-use-03 why-use-03">
+            <div class="why-use-03__container">
+               <div class="why-use-03__inner">
+                  <div class="why-use-03__title title">
+                     WHY USE A VPN?
+                  </div>
+                  <div class="why-use-03__desc">
+                     <p>
+                        Using the internet these days is more daunting than ever, with many types of cyberthreats. There is only one true way to use the internet privately, and that is with a VPN or Virtual Private Network. Whether you want to watch region-specific content or create a secure home office environment, VPNs can be more useful now than ever.                     </p>
+                  </div>
+               </div>
+
+               <div class="why-use-03__content">
+                  <div class="why-use-03__row">
+                     <div class="why-use-03__column">
+                        <div class="why-use-03__card">
+                           <div class="why-use-03__image why-use-03__image_01">
+                              <img src="@img/why-use/icon-31.svg" alt="Icon">
+                           </div>
+                           <div class="why-use-03__square">
+                              <div class="why-use-03__text">
+                                 HIGH SPEED
+                              </div>
+                           </div>
+                        </div>
+                     </div>
+
+                     <div class="why-use-03__column">
+                        <div class="why-use-03__card">
+                           <div class="why-use-03__image why-use-03__image_02">
+                              <img src="@img/why-use/icon-32.svg" alt="Icon">
+                           </div>
+                           <div class="why-use-03__square">
+                              <div class="why-use-03__text">
+                                 UNLIMITED DEVICES
+                              </div>
+                           </div>
+                        </div>
+                     </div>
+                     
+                     <div class="why-use-03__column">
+                        <div class="why-use-03__card">
+                           <div class="why-use-03__image why-use-03__image_03">
+                              <img src="@img/why-use/icon-33.svg" alt="Icon">
+                           </div>
+                           <div class="why-use-03__square">
+                              <div class="why-use-03__text">
+                                 HIGHLY SECURE
+                              </div>
+                           </div>
+                        </div>
+                     </div>
+
+                     <div class="why-use-03__column">
+                        <div class="why-use-03__card">
+                           <div class="why-use-03__image why-use-03__image_04">
+                              <img src="@img/why-use/icon-34.svg" alt="Icon">
+                           </div>
+                           <div class="why-use-03__square">
+                              <div class="why-use-03__text">
+                                 QUICK CONNECTIVITY
+                              </div>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+
+            </div>
+         </section>
+
          <section class="page__features-03 features-03">
             <div class="features-03__container">
                <h2 class="features-03__title title">
