section why-use-03 исправил

--- a/src/home-03.html
+++ b/src/home-03.html
@@ -17,68 +17,77 @@
                   </div>
                   <div class="why-use-03__desc">
                      <p>
-                        Using the internet these days is more daunting than ever, with many types of cyberthreats. There is only one true way to use the internet privately, and that is with a VPN or Virtual Private Network. Whether you want to watch region-specific content or create a secure home office environment, VPNs can be more useful now than ever.                     </p>
+                        Using the internet these days is more daunting than ever, with many types of cyberthreats. There
+                        is only one true way to use the internet privately, and that is with a VPN or Virtual Private
+                        Network. Whether you want to watch region-specific content or create a secure home office
+                        environment, VPNs can be more useful now than ever. </p>
                   </div>
                </div>
 
                <div class="why-use-03__content">
                   <div class="why-use-03__row">
                      <div class="why-use-03__column">
-                        <div class="why-use-03__card">
-                           <div class="why-use-03__image why-use-03__image_01">
-                              <img src="@img/why-use/icon-31.svg" alt="Icon">
-                           </div>
-                           <div class="why-use-03__square">
-                              <div class="why-use-03__text">
-                                 HIGH SPEED
+                        <div class="why-use-03__big-card why-use-03__big-card_01">
+                           <div class="why-use-03__card">
+                              <div class="why-use-03__image why-use-03__image_01">
+                                 <img src="@img/why-use/icon-31.svg" alt="Icon">
+                              </div>
+                              <div class="why-use-03__square">
+                                 <div class="why-use-03__text">
+                                    HIGH SPEED
+                                 </div>
                               </div>
                            </div>
                         </div>
                      </div>
-
                      <div class="why-use-03__column">
-                        <div class="why-use-03__card">
-                           <div class="why-use-03__image why-use-03__image_02">
-                              <img src="@img/why-use/icon-32.svg" alt="Icon">
-                           </div>
-                           <div class="why-use-03__square">
-                              <div class="why-use-03__text">
-                                 UNLIMITED DEVICES
+                        <div class="why-use-03__big-card why-use-03__big-card_02">
+                           <div class="why-use-03__card">
+                              <div class="why-use-03__image why-use-03__image_02">
+                                 <img src="@img/why-use/icon-32.svg" alt="Icon">
+                              </div>
+                              <div class="why-use-03__square">
+                                 <div class="why-use-03__text">
+                                    UNLIMITED DEVICES
+                                 </div>
                               </div>
                            </div>
                         </div>
                      </div>
-                     
                      <div class="why-use-03__column">
-                        <div class="why-use-03__card">
-                           <div class="why-use-03__image why-use-03__image_03">
-                              <img src="@img/why-use/icon-33.svg" alt="Icon">
-                           </div>
-                           <div class="why-use-03__square">
-                              <div class="why-use-03__text">
-                                 HIGHLY SECURE
+                        <div class="why-use-03__big-card why-use-03__big-card_03">
+                           <div class="why-use-03__card">
+                              <div class="why-use-03__image why-use-03__image_03">
+                                 <img src="@img/why-use/icon-33.svg" alt="Icon">
+                              </div>
+                              <div class="why-use-03__square">
+                                 <div class="why-use-03__text">
+                                    HIGHLY SECURE
+                                 </div>
                               </div>
                            </div>
                         </div>
                      </div>
-
                      <div class="why-use-03__column">
-                        <div class="why-use-03__card">
-                           <div class="why-use-03__image why-use-03__image_04">
-                              <img src="@img/why-use/icon-34.svg" alt="Icon">
-                           </div>
-                           <div class="why-use-03__square">
-                              <div class="why-use-03__text">
-                                 QUICK CONNECTIVITY
+                        <div class="why-use-03__big-card why-use-03__big-card_04">
+                           <div class="why-use-03__card">
+                              <div class="why-use-03__image why-use-03__image_04">
+                                 <img src="@img/why-use/icon-34.svg" alt="Icon">
+                              </div>
+                              <div class="why-use-03__square">
+                                 <div class="why-use-03__text">
+                                    QUICK CONNECTIVITY
+                                 </div>
                               </div>
                            </div>
                         </div>
                      </div>
                   </div>
                </div>
-
             </div>
          </section>
+
+
 
          <section class="page__features-03 features-03">
             <div class="features-03__container">
