section protection-02 finish

--- a/src/home-02.html
+++ b/src/home-02.html
@@ -1,86 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
-	@@include('html/_head.htm',{
-	"title":"VPNLandingPages-02"
-	})
-	<body>
-		<div class="wrapper">
-			@@include('html/_header-02.htm',{})
-			<main class="page">
-            <div class="proba__title _icon-berdle">
-              <p class="_icon-logo">PROTECT ALL YOUR DEVICES</p> 
+@@include('html/_head.htm',{
+"title":"VPNLandingPages-02"
+})
+
+<body>
+   <div class="wrapper">
+      @@include('html/_header-02.htm',{})
+      <main class="page">
+         <div class="proba__title _icon-berdle">
+            <p class="_icon-logo">PROTECT ALL YOUR DEVICES</p>
+         </div>
+
+         <section class="page__protection-02 protection-02">
+            <div class="protection-02__title title">
+               PROTECTALL YOUR DEVICES
             </div>
-            
-            <section class="page__support support">
-               <div class="support__container">
-                  <div class="support__inner">
-                     <div class="support__row">
-                        <div class="support__column support__column_01">
-                           <div class="support__card">
-                              <div class="support__title">WE VALUE YOUR PRIVACY</div>
-                              <div class="support__text">
-                                 <p>
-                                    Your information provided is solely used by PrivateSurf VPN
-                                    for the use of a virtual private network.
-                                    We will not sell your information to any other party.
-                                 </p>
-                              </div>
-                           </div>
-                        </div>
-   
-                        <div class="support__column support__column_02">
-                           <div class="support__card">
-                              <div class="support__title">CUSTOMER SUPPORT</div>
-                              <div class="support__text">
-                                 <p>
-                                    Our technical support team is ready to answer questions.
-                                    You can contact them at cs@surfingvpn.com
-                                 </p>
-                              </div>
-                           </div>
-                        </div>
-   
-                        <div class="support__column support__column_03">
-                           <div class="support__card">
-                              <div class="support__title">YOUR SATISFACTION IS OUR PRIORITY</div>
-                              <div class="support__text">
-                                 <p>
-                                    If you are in any way unhappy with the quality of our service
-                                    or product please contact us. We are here to help you.
-                                 </p>
-                              </div>
-                           </div>
-                        </div>
-   
-                        <div class="support__column support__column_04">
-                           <div class="support__card">
-                              <div class="support__title">WHAT ARE THE BENEFITS OF A VPN?</div>
-                              <div class="support__text">
-                                 <p>
-                                    With PrivateSurf VPN you can access content from different
-                                    countries, which would not neccessarily be available in your
-                                    country. Also with a VPN you can hide your online presence
-                                    to secure your daily internet activity
-                                 </p>
-                              </div>
+            <div class="protection-02__container">
+               <div class="protection-02__design-02 design-02">
+                  <div class="design-02__subtitle">
+                     PRIVATESURF VPN IS AN APPLICATION DESIGNED FOR YOU:
+                  </div>
+
+                  <div class="design-02__offers">
+                     <ul class="design-02__items">
+                        <li class="design-02__item">
+                           <img src="@img/protection/birdie-02.svg" alt="birdie">
+                           <p>Use PrivateSurf VPN on every device</p>
+                        </li>
+                        <li class="design-02__item">
+                           <img src="@img/protection/birdie-02.svg" alt="birdie">
+                           <p>One click to a safer internet</p>
+                        </li>
+                        <li class="design-02__item">
+                           <img src="@img/protection/birdie-02.svg" alt="birdie">
+                           <p>Secure access, worldwide</p>
+                        </li>
+                        <li class="design-02__item">
+                           <img src="@img/protection/birdie-02.svg" alt="birdie">
+                           <p>Stronger data protection</p>
+                        </li>
+                     </ul>
+                  </div>
+
+                  <a class="design-02__btn-02 btn-02 btn-02_grey" href="#">GET STARTED</a>
+               </div>
+
+               <div class="protection-02__image">
+                  <img src="@img/protection/image-02.jpg" alt="Image">
+               </div>
+            </div>
+         </section>
+
+         <section class="page__support support">
+            <div class="support__container">
+               <div class="support__inner">
+                  <div class="support__row">
+                     <div class="support__column support__column_01">
+                        <div class="support__card">
+                           <div class="support__title">WE VALUE YOUR PRIVACY</div>
+                           <div class="support__text">
+                              <p>
+                                 Your information provided is solely used by PrivateSurf VPN
+                                 for the use of a virtual private network.
+                                 We will not sell your information to any other party.
+                              </p>
                            </div>
                         </div>
                      </div>
-   
-                     <div class="support__conditions">
-                        <ul class="support__items">
-                           <li>Privacy Policy</li>
-                           <li>Terms and conditions</li>
-                           <li>Contact</li>
-                           <li>How to uninstall</li>
-                        </ul>
+
+                     <div class="support__column support__column_02">
+                        <div class="support__card">
+                           <div class="support__title">CUSTOMER SUPPORT</div>
+                           <div class="support__text">
+                              <p>
+                                 Our technical support team is ready to answer questions.
+                                 You can contact them at cs@surfingvpn.com
+                              </p>
+                           </div>
+                        </div>
+                     </div>
+
+                     <div class="support__column support__column_03">
+                        <div class="support__card">
+                           <div class="support__title">YOUR SATISFACTION IS OUR PRIORITY</div>
+                           <div class="support__text">
+                              <p>
+                                 If you are in any way unhappy with the quality of our service
+                                 or product please contact us. We are here to help you.
+                              </p>
+                           </div>
+                        </div>
+                     </div>
+
+                     <div class="support__column support__column_04">
+                        <div class="support__card">
+                           <div class="support__title">WHAT ARE THE BENEFITS OF A VPN?</div>
+                           <div class="support__text">
+                              <p>
+                                 With PrivateSurf VPN you can access content from different
+                                 countries, which would not neccessarily be available in your
+                                 country. Also with a VPN you can hide your online presence
+                                 to secure your daily internet activity
+                              </p>
+                           </div>
+                        </div>
                      </div>
                   </div>
+
+                  <div class="support__conditions">
+                     <ul class="support__items">
+                        <li>Privacy Policy</li>
+                        <li>Terms and conditions</li>
+                        <li>Contact</li>
+                        <li>How to uninstall</li>
+                     </ul>
+                  </div>
                </div>
-            </section>
-			</main>
-			@@include('html/_footer-02.htm',{})
-		</div>
-		@@include('html/_js.htm',{})
-	</body>
+            </div>
+         </section>
+      </main>
+      @@include('html/_footer-02.htm',{})
+   </div>
+   @@include('html/_js.htm',{})
+</body>
+
 </html>
