section features-02 finish

--- a/src/home-02.html
+++ b/src/home-02.html
@@ -12,6 +12,91 @@
             <p class="_icon-logo">PROTECT ALL YOUR DEVICES</p>
          </div>
 
+
+         <section class="page__features features-02">
+            <div class="features-02__container">
+               <div class="features-02__inner">
+                  <h2 class="features-02__title title">
+                     features
+                  </h2>
+
+                  <div class="features-02__body-card card-02">
+                     <!--блок для ограничения ширины в 1300px-->
+                     <div class="card-02__row">
+                        <!--будущий flex-контейнер-->
+                        <div class="card-02__column">
+                           <!--колонки-->
+                           <div class="card-02__item">
+                              <!--создаем саму карточку flex-элемент-->
+                              <div class="card-02__image">
+                                 <img src="@img/features/icon-21.svg" alt="" class="card-02__icon">
+                              </div>
+                              <div class="card-02__text">Browse privately</div>
+                           </div>
+                        </div>
+
+                        <div class="card-02__column">
+                           <!--колонки-->
+                           <div class="card-02__item">
+                              <!--создаем саму карточку flex-элемент-->
+                              <div class="card-02__image">
+                                 <img src="@img/features/icon-22.svg" alt="" class="card-02__icon">
+                              </div>
+                              <div class="card-02__text">Bypass</div>
+                           </div>
+                        </div>
+
+                        <div class="card-02__column">
+                           <!--колонки-->
+                           <div class="card-02__item">
+                              <!--создаем саму карточку flex-элемент-->
+                              <div class="card-02__image">
+                                 <img src="@img/features/icon-23.svg" alt="" class="card-02__icon">
+                              </div>
+                              <div class="card-02__text">Clean web</div>
+                           </div>
+                        </div>
+
+                        <div class="card-02__column">
+                           <!--колонки-->
+                           <div class="card-02__item">
+                              <!--создаем саму карточку flex-элемент-->
+                              <div class="card-02__image">
+                                 <img src="@img/features/icon-24.svg" alt="" class="card-02__icon">
+                              </div>
+                              <div class="card-02__text">No logging</div>
+                           </div>
+                        </div>
+
+                        <div class="card-02__column">
+                           <!--колонки-->
+                           <div class="card-02__item">
+                              <!--создаем саму карточку flex-элемент-->
+                              <div class="card-02__image">
+                                 <img src="@img/features/icon-25.svg" alt="" class="card-02__icon">
+                              </div>
+                              <div class="card-02__text">Encryption</div>
+                           </div>
+                        </div>
+
+                        <div class="card-02__column">
+                           <!--колонки-->
+                           <div class="card-02__item">
+                              <!--создаем саму карточку flex-элемент-->
+                              <div class="card-02__image">
+                                 <img src="@img/features/icon-26.svg" alt="" class="card-02__icon">
+                              </div>
+                              <div class="card-02__text">Kill switch</div>
+                           </div>
+                        </div>
+
+                     </div>
+                  </div>
+
+               </div>
+            </div>
+         </section>
+
          <section class="page__protection-02 protection-02">
             <div class="protection-02__title title">
                PROTECTALL YOUR DEVICES
