section steps-02 finish

--- a/src/home-02.html
+++ b/src/home-02.html
@@ -97,6 +97,27 @@
             </div>
          </section>
 
+         <section class="page__steps steps-02">
+            <div class="steps-02__container">
+               <div class="steps-02__inner">
+                  <div class="steps-02__title title">
+                     PRIVACY AND PROTECTION IN THREE STEPS
+                  </div>
+                  <div class="steps-02__image">
+                     <img src="@img/steps/step-21.svg" alt="Image">
+                  </div>
+                  <div class="steps-02__subtitle">
+                     PRIVATESURF VPN IS AN APPLICATIOn DESIGNED FOR YOU:
+                  </div>
+                  <div class="steps-02__buttons">
+                     <a class="steps-02__btn-02" href="#">DOWNLOAD</a>
+                     <a class="steps-02__btn-02" href="#">SELECT SERVER</a>
+                     <a class="steps-02__btn-02" href="#">ACTIVATE & GO!</a>
+                  </div>
+               </div>               
+            </div>
+         </section>         
+
          <section class="page__protection-02 protection-02">
             <div class="protection-02__title title">
                PROTECTALL YOUR DEVICES
